# backend/src/modules/bus/dto/update-bus.dto.ts
@@ -1,1 +1,4 @@
-export class UpdateBusDto {}
+import { PartialType } from '@nestjs/swagger';
+import { CreateBusDto } from './create-bus.dto';
+
+export class UpdateBusDto extends PartialType(CreateBusDto) {}
